--- a/InsuranceCorp/InsuranceCorp/InsuranceCorp.MVC/Views/Shared/_Layout.cshtml
+++ b/InsuranceCorp/InsuranceCorp/InsuranceCorp.MVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Status" asp-action="Index">Status</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="Index">Osoby</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
