--- a/InsuranceCorp/InsuranceCorp/InsuranceCorp.Blazor/Shared/NavMenu.razor
+++ b/InsuranceCorp/InsuranceCorp/InsuranceCorp.Blazor/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Přidej novou
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/person/search">
+                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Hledej
+            </NavLink>
+        </div>
     </nav>
 </div>
 
